# picocart

./: #address.pio#  .gitignore  .gitmodules  CMakeLists.txt  PicoCart.c  add_sm.pio  build-and-deploy.sh  test_rom.h
board/: PicoCart.kicad_pcb  PicoCart.kicad_pro  PicoCart.kicad_sch  sym-lib-table  ~PicoCart.kicad_sch.lck
board/footprints/COMM38_2-767004-2/: 2023-04-15_12-24-35.kicad_sym
board/footprints/Library.pretty/: CONN38_2-767004-2_TEC.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
board/production/: netlist.ipc
board/templates/KiCad-RP-Pico-main/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: IC57_RP2040-L.kicad_mod
boards/debug_board/: PicoCart_DEBUG.kicad_pcb  PicoCart_DEBUG.kicad_sch  fp-lib-table  sym-lib-table
boards/footprints/COMM38_2-767004-2/footprints.pretty/: CONN38_2-767004-2_TEC.kicad_mod
boards/footprints/DM3AT-SF-PEJM5 Model/: dm3at-sf-pejm5.wrl
boards/footprints/EdgeConnector/: MSX_Cartridge.kicad_mod
boards/footprints/PicoCartLibrary.pretty/: MSX_Cartridge.kicad_mod  RPi_Pico_SMD_TH.kicad_mod  microSD_HC_Hirose_DM3AT-SF-PEJM5.kicad_mod
boards/footprints/RP-Pico Libraries/: MCU_RaspberryPi_and_Boards.kicad_sym
boards/footprints/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
boards/main_board/: PicoCart.kicad_pcb  PicoCart.kicad_sch  fp-lib-table  sym-lib-table
bus_debug_python/: io.py  main.py
bus_debug_python/core/: __init__.py  io.py
bus_debug_python/core/mocks/: __init__.py
includes/address_bus/: address_bus.c  address_bus.h  address_bus.pio
includes/control/: control.h
includes/fs/: #fs.h#  .#fs.h
rp2040_src/: CMakeLists.txt  compile_commands.json
rp2040_src/core/: CMakeLists.txt  core.c
rp2040_src/core/includes/: config.h  data.h
rp2040_src/core/includes/control/: control.h
rp2040_src/core/includes/fs/: fs.h
rp2040_src/debug_board/: CMakeLists.txt  debug_board.c
rp2040_src/debug_board/includes/: constants.h  data.h  debug_gpio.c  debug_gpio.h  display.c  display.h  ssd1306.c  ssd1306.h
rp2040_src/includes/: config.h  sd_hw.c
